# invaders

./: .gitignore  .gitsttributes  CMakeLists.txt  readme.md
config/: 6502.cfg  8080.cfg  dump.hex  invaders.dis  traceout.dis
documents/: adi_tests.cpp  dcx_tests.cpp  inx_tests.cpp  lxi_tests.cpp  nop_tests.cpp  stax_tests.cpp
documents/design/: classes.puml  cpu_update.puml  game_update.puml  invaders.md  main_sequence.puml
include/shared/common/: config.h  utilities.h
invaders/include/: invaders.h
invaders/include/common/: config.h  constants.h
invaders/include/hardware/: cabinet.h  constants.h
invaders/source/: game.cpp  invaders.cpp
invaders/source/common/: config.cpp  constants.cpp
invaders/source/hardware/: cabinet.cpp  constants.cpp
invaders/test/hardware/: addition_tests.cpp  arithmetic_test_fixture.cpp  branching_test_fixture.cpp  branching_test_fixture.h  cabinet_tests.cpp  data_transfer_test_fixture.h  data_transfer_tests.cpp  load_instructions_test.cpp
roms/: instruction_set.csv  invaders.cfg  invaders.dis
source/: constants.h  disassembler.cpp  game.cpp  invaders.cpp
source/applications/: CMakeLists.txt  cpu_main.cpp  disassembler.cpp  disassembler_main.cpp  emulator.cpp  hexdump.cpp  nes_disassembler.cpp
source/cabinet/: cabinet.cpp  cabinet.h  constants.h  flags.h  intel8080.cpp  intel8080.h  memory.cpp  memory.h  registers.h
source/cabinet/instructions/: aci.h  adc.h  add.h  adi.h  ana.h  ani.h  call.h  cma.h  cmc.h  cmp.h  cpi.h  daa.h  dad.h  dcr.h  dcx.h  di.h  ei.h  hlt.h  in.h  inr.h  instruction.cpp  instruction.h  instructions.h  inx.h  jump.h  lda.h  ldax.h  lhld.h  lxi.h  mov.h  mvi.h  nop.h  ora.h  ori.h  out.h  pchl.h  pop.h  push.h  return.h  rotate.h  (+15 more)
source/i8080/: flags.h  instruction.h  intel8080.cpp  intel8080.h  opcodes.h  registers.h
source/i8080/instructions/: aci.h  adc.h  add.h  adi.h  ana.h  ani.h  call.h  cma.h  cmc.h  cmp.h  cpi.h  daa.h  dad.h  dcr.h  dcx.h  di.h  ei.h  hlt.h  in.h  inr.h  instructions.h  inx.h  jump.h  lda.h  ldax.h  lhld.h  lxi.h  mov.h  mvi.h  nop.h  opcode.cpp  opcode.h  ora.h  ori.h  out.h  pchl.h  pop.h  push.h  return.h  rotate.h  (+15 more)
source/i8080/opcodes/: aci.h  adc.h  add.h  adi.h  ana.h  ani.h  call.h  cma.h  cmc.h  cmp.h  cpi.h  daa.h  dad.h  dcr.h  dcx.h  di.h  ei.h  hlt.h  in.h  inr.h  inx.h  jump.h  lda.h  ldax.h  lhld.h  lxi.h  mov.h  mvi.h  nop.h  opcode.cpp  opcode.h  ora.h  ori.h  out.h  pchl.h  pop.h  push.h  return.h  rotate.h  rst.h  (+14 more)
source/invaders/: cabinet.cpp  cabinet.h  invaders.cpp  invaders.h
source/memory/: memory.cpp  memory.h
source/shared/: CMakeLists.txt
source/shared/common/: CMakeLists.txt  config.cpp  config.h  logger.cpp  logger.h  utilities.cpp  utilities.h
source/shared/config/: configreader.cpp  configreader.h
source/shared/cpu/: CMakeLists.txt
source/shared/disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.h
source/shared/machine/: CMakeLists.txt
source/shared/machine/cpu/6502/: flags.h  mos6502.cpp  mos6502.h  opcode.h  registers.h
source/shared/machine/cpu/6502/opcodes/: brk.h  mnemonics.cpp  mnemonics.h  orax.h
source/shared/machine/cpu/8080/: constants.h  flags.h  intel8080.cpp  intel8080.h  opcode.cpp  opcode.h  registers.h
source/shared/machine/cpu/8080/opcodes/: aci.h  adc.h  add.h  adi.h  ana.h  ani.h  call.h  cma.h  cmc.h  cmp.h  cpi.h  daa.h  dad.h  dcr.h  dcx.h  di.h  ei.h  hlt.h  in.h  inr.h  inx.h  jump.h  lda.h  ldax.h  lhld.h  lxi.h  mov.h  mvi.h  nop.h  opcodes.h  ora.h  ori.h  out.h  pchl.h  pop.h  push.h  return.h  rotate.h  rst.h  sbb.h  (+13 more)
source/shared/machine/memory/: memory.cpp  memory.h
source/shared/machine/ram/: ram.cpp  ram.h
source/shared/machine/video/: videodriver.cpp  videodriver.h
source/shared/opcodes/: CMakeLists.txt  opcode.h  opcodes.cpp  opcodes.h
test/: CMakeLists.txt  invaders.cpp
test/cabinet/instructions/: OpCodeTestFixture.cpp  OpCodeTestFixture.h  aci_tests.cpp  adc_tests.cpp  add_tests.cpp  adi_tests.cpp  ana_tests.cpp  ani_tests.cpp  call_tests.cpp  cma_tests.cpp  cmc_tests.cpp  cmp_tests.cpp  cpi_tests.cpp  daa_tests.cpp  in_tests.cpp  jump_tests.cpp  opcode_test.cpp  ora_tests.cpp  ori_tests.cpp  xra_tests.cpp
test/i8080/opcodes/: OpCodeTestFixture.cpp  OpCodeTestFixture.h  aci_tests.cpp  adc_tests.cpp  add_tests.cpp  adi_tests.cpp  ana_tests.cpp  ani_tests.cpp  call_tests.cpp  cma_tests.cpp  cmc_tests.cpp  cmp_tests.cpp  in_tests.cpp  jump_tests.cpp  opcode_test.cpp  ora_tests.cpp  ori_tests.cpp  xra_tests.cpp
test/shared/cpu/8080/: CMakeLists.txt  intel8080_tests.cpp  intel8080testfixture.cpp  intel8080testfixture.h  memorymap_tests.cpp  memorymaptestfixture.cpp  memorymaptestfixture.h
test/shared/cpu/8080/instructions/: CMakeLists.txt  addition_tests.cpp  compare_tests.cpp  decrement_tests.cpp  increment_tests.cpp  instruction_testfixture.cpp  instruction_testfixture.h  instructions_00_0f.h  instructions_10_1f.h  instructions_20_2f.h  instructions_30_3f.h  instructions_40_4f.h  instructions_50_5f.h  instructions_60_6f.h  instructions_70_7f.h  instructions_80_8f.h  instructions_90_9f.h  instructions_a0_af.h  instructions_b0_bf.h  instructions_c0_cf.h  instructions_d0_df.h  instructions_e0_ef.h  instructions_f0_ff.h  io_tests.cpp  jump_tests.cpp  load_tests.cpp  move_tests.cpp
test/shared/cpu/8080/instructions/arithmetic_group/: aci_tests.cpp  adc_tests.cpp  add_tests.cpp  addition_tests.cpp  adi_tests.cpp  arithmetic_tests.cpp  arithmetictestfixture.cpp  arithmetictestfixture.h  dad_tests.cpp  dcr_tests.cpp  dcx_tests.cpp  decrement_tests.cpp  increment_tests.cpp  inr_tests.cpp  inx_tests.cpp
test/shared/cpu/8080/opcodes/: OpCodeTestFixture.cpp  OpCodeTestFixture.h  aci_tests.cpp  adc_tests.cpp  add_tests.cpp  adi_tests.cpp  ana_tests.cpp  ani_tests.cpp  call_tests.cpp  cma_tests.cpp  cmc_tests.cpp  cmp_tests.cpp  dcr_tests.cpp  in_tests.cpp  inr_tests.cpp  jump_tests.cpp  opcode_test.cpp  ora_tests.cpp  ori_tests.cpp  xra_tests.cpp
test/shared/memory/: memory_test.cpp
test/shared/ram/: ram_test.cpp
test/shared/video/: videodriver.cpp
(+123 files in other folders)
